# jpl-ephemeris

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INDEPENDENT_DEVELOPMENT_POLICY.md  README.md  SWISS_EPHEMERIS_USAGE_INVENTORY.md  THIRD_PARTY_NOTICES.md  all_defined_jme_funcs.txt  all_jme_const_names.txt  all_jme_constants.txt  all_jme_constants_v3.txt  all_jme_functions.txt  all_jme_functions_v3.txt  all_jme_names.txt  current_jme_api.txt  final_const_list.txt  final_func_list.txt  gplan.c  jme_all_funcs_v2.txt  library_symbols.txt  mer404.c  unique_jme_names.txt  ven404.c
.github/workflows/: release-jpl-kernels.yml
Prompts/: 112.md  compare.md
build-calceph/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_all_constants  test_all_functions  test_analytical_validation  test_api_contract  test_jpl_runtime  test_julian
build-calceph-runtime/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_all_constants  test_all_functions  test_analytical_validation  test_api_contract  test_extra_contract  test_jpl_runtime  test_julian
build-calceph-runtime/Testing/Temporary/: CTestCostData.txt
build-calceph/Testing/Temporary/: CTestCostData.txt
build-local/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jme.sln  jme.vcxproj  jme.vcxproj.filters  jme_call_probe.vcxproj  jme_call_probe.vcxproj.filters  test_all_constants.vcxproj  test_all_constants.vcxproj.filters  test_all_functions.vcxproj  test_all_functions.vcxproj.filters  test_analytical_validation.vcxproj  test_analytical_validation.vcxproj.filters  test_api_contract.vcxproj  test_api_contract.vcxproj.filters  test_extra_adversarial.vcxproj  test_extra_adversarial.vcxproj.filters  test_extra_contract.vcxproj  test_extra_contract.vcxproj.filters  test_jpl_runtime.vcxproj  test_jpl_runtime.vcxproj.filters  test_julian.vcxproj  test_julian.vcxproj.filters  test_mapped_adversarial.vcxproj  test_mapped_adversarial.vcxproj.filters
build-local/Debug/: jme.exp
build-local/Release/: jme.exp
build-local/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp10bfe
build-local/jme.dir/Debug/: exports.def  jme.dll.recipe  jme.lib.recipe  objects.txt
build-local/jme.dir/MinSizeRel/: objects.txt
build-local/jme.dir/RelWithDebInfo/: objects.txt
build-local/jme.dir/Release/: exports.def  jme.dll.recipe  objects.txt
build-local/jme_call_probe.dir/Release/: jme_call_probe.exe.recipe
build-local/test_all_constants.dir/Debug/: test_all_constants.exe.recipe  test_all_constants.ilk
build-local/test_all_constants.dir/Release/: test_all_constants.exe.recipe
build-local/test_all_functions.dir/Debug/: test_all_functions.exe.recipe
build-local/test_all_functions.dir/Release/: test_all_functions.exe.recipe
build-local/test_analytical_validation.dir/Debug/: test_analytical_validation.exe.recipe  test_analytical_validation.ilk
build-local/test_analytical_validation.dir/Release/: test_analytical_validation.exe.recipe
build-local/test_julian.dir/Debug/: test_julian.exe.recipe  (+1 more)
build-release-fix/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jme.sln  jme.vcxproj  jme.vcxproj.filters  jme_call_probe.vcxproj  jme_call_probe.vcxproj.filters  test_all_constants.vcxproj  test_all_constants.vcxproj.filters  test_all_functions.vcxproj  test_all_functions.vcxproj.filters  test_analytical_validation.vcxproj  test_analytical_validation.vcxproj.filters  test_api_contract.vcxproj  test_api_contract.vcxproj.filters  test_extra_adversarial.vcxproj  test_extra_adversarial.vcxproj.filters  test_extra_contract.vcxproj  test_extra_contract.vcxproj.filters  test_jpl_runtime.vcxproj  test_jpl_runtime.vcxproj.filters  test_julian.vcxproj  test_julian.vcxproj.filters  test_mapped_adversarial.vcxproj  test_mapped_adversarial.vcxproj.filters
build-release-fix/Release/: jme.exp  jme.lib
build-vcpkg/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jme.sln  jme.vcxproj  jme.vcxproj.filters  test_all_constants.vcxproj  test_all_constants.vcxproj.filters  test_all_functions.vcxproj  test_all_functions.vcxproj.filters  test_api_contract.vcxproj  test_api_contract.vcxproj.filters  test_jpl_runtime.vcxproj  test_jpl_runtime.vcxproj.filters  test_julian.vcxproj  test_julian.vcxproj.filters
build-vcpkg/Debug/: jme.lib
docs/: ALGORITHM_COVERAGE.md  API_INVENTORY.md  API_REFERENCE.md  API_TRACKING.md  CALCEPH_SETUP.md  ENGINE_DIFFERENTIAL_MATRIX.md  EPHEMERIS_ENGINE_KNOWLEDGE_BASE.md  FUNCTION_CLOSURE_CHECKLIST.md  IMPLEMENTATION_STATUS.md  LOSSLESS_IO.md  POLICIES_AND_NOTICES.md  PRODUCT_CONTRACT.md  PROVENANCE.md  REFERENCE_FUNCTION_COVERAGE.md  STATUS_AND_DESIGN.md  SWISSEPH_COMPARISON.md  VALIDATION_AND_COVERAGE.md  VALUE_VERIFICATION_MATRIX.md
include/jme/: jme.h  jme_extended.h
include/jme_compat/: swephexp.h
researches/: chatgpt.md  claude.md  deepseek.md  gemini.md  qwen-1.md  qwen-2.md
src/: angle.c  api.c  astrometry.c  calc.c  context.c  context.h  coordinates.c  elp2000.c  events.c  fixstar.c  fixstar_catalog.inc  houses.c  jpl.c  julian.c  meeus.c  metadata.c  moshier.c  moshier_full.c  moshier_moon.c  sidereal.c  time.c  vsop87.c
src/elp2000/: elp2000-82b.c  series.c
src/moshier/: ear404.c  gplan.c  jup404.c  mar404.c  mer404.c  mlr404.c  moonlat404.c  moonlr404.c  nep404.c  plantbl.h  plu404.c  sat404.c  ura404.c  ven404.c
tests/: jme_call_probe.c  test_all_constants.c  test_all_functions.c  test_analytical_validation.c  test_api_contract.c  test_extra_adversarial.c  test_extra_contract.c  test_inventory.ps1  test_jpl_runtime.c  test_julian.c  test_mapped_adversarial.c  test_symbol_coverage.ps1
tests/fixtures/: jpl_constants.tpc
tools/: generate_value_verification_matrix.py  run_engine_matrix.sh
(+337 files in other folders)
